--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>Using a type system</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <article class ="card max-lenght">
+  <article class ="card max-length">
     <img class="img-flex" src="images/glyptodon.jpg" alt="">
     <div class="island">
       <h1 class="zetta">Glyptodon</h1>
